# openpoints

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
cpp/: __init__.py
cpp/chamfer_dist/: __init__.py
cpp/emd/: emd.py
cpp/emd/cuda/: emd_kernel.cu
cpp/pointnet2_batch/: __init__.py
cpp/pointops/functions/: pointops.py
cpp/pointops/src/ballquery/: ballquery_cuda_kernel.cu
dataset/: __init__.py  build.py  data_util.py  vis3d.py
dataset/modelnet/: __init__.py  modelnet40_ply_2048_loader.py
dataset/s3dis/: s3dis.py  s3dis_sphere.py
dataset/scanobjectnn/: scanobjectnn.py
dataset/semantic_kitti/: helper_tool.py
loss/: __init__.py  build.py
models/: __init__.py
models/backbone/: Stratified_transformer.py  __init__.py  debug_invvit.py  deepgcn.py  dgcnn.py  graphvit3d.py  pointmlp.py  pointnet.py  pointnetv2.py  pointnext.py  pointnextPyG.py  pointtransformer.py  pointvector.py  pointvit.py  pointvit_inv.py  pointvit_inv_old.py  sfc_vit.py  variable_pointnext.py
models/classification/: cls_base.py  point_bert.py
models/layers/: __init__.py  conv.py  group.py  group_embed.py  knn.py  local_aggregation.py  norm.py  subsample.py  upsampling.py
models/segmentation/: __init__.py  base_seg.py
openpoints/models/backbone/: pointnext.py
openpoints/models/classification/: cls_base.py
optim/: optim_factory.py
scheduler/: cosine_lr.py  scheduler_factory.py
tests/: test_data_util.py  test_imports.py  test_optional_cuda_imports.py  test_pointmlp_hooks.py
transforms/: point_transform_cpu.py  point_transformer_gpu.py
utils/: __init__.py  ckpt_util.py  config.py  dist_utils.py  logger.py  metrics.py  wandb.py
