[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpoints"
version = "0.1.0"
description = "OpenPoints: point cloud understanding models, layers, datasets, transforms, optimizers, and training utilities."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Guocheng Qian" }]
keywords = ["point cloud", "deep learning", "pytorch", "3d vision", "PointNeXt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=1.10",
  "numpy>=1.20",
  "scipy>=1.7",
  "PyYAML>=5.4",
  "multimethod>=1.8",
  "termcolor>=1.1",
  "shortuuid>=1.0",
  "scikit-learn>=1.0",
  "tqdm>=4",
  "easydict>=1.9",
  "h5py>=3",
  "pandas>=1.3",
  "torchvision>=0.11",
]

[project.optional-dependencies]
data = [
  "easydict>=1.9",
  "h5py>=3",
  "pandas>=1.3",
  "torchvision>=0.11",
]
viz = [
  "matplotlib>=3.5",
  "pyvista>=0.38",
]
graph = [
  "numba>=0.56",
  "ogb>=1.3",
  "atom3d>=0.2",
  "fast-pytorch-kmeans>=0.1",
]
tfds = [
  "Pillow>=8",
  "tensorflow>=2",
  "tensorflow-datasets>=4",
]
wandb = [
  "wandb>=0.13",
]
dev = [
  "build>=1",
  "twine>=4",
  "pytest>=7",
]
all = [
  "easydict>=1.9",
  "h5py>=3",
  "pandas>=1.3",
  "torchvision>=0.11",
  "matplotlib>=3.5",
  "pyvista>=0.38",
  "numba>=0.56",
  "ogb>=1.3",
  "atom3d>=0.2",
  "fast-pytorch-kmeans>=0.1",
  "Pillow>=8",
  "tensorflow>=2",
  "tensorflow-datasets>=4",
  "wandb>=0.13",
]

[project.urls]
Homepage = "https://github.com/guochengqian/openpoints"
Repository = "https://github.com/guochengqian/openpoints"
Issues = "https://github.com/guochengqian/PointNeXt/issues"

[tool.setuptools]
package-dir = { "openpoints" = "." }
packages = [
  "openpoints",
  "openpoints.cpp",
  "openpoints.cpp.chamfer_dist",
  "openpoints.cpp.emd",
  "openpoints.cpp.pointnet2_batch",
  "openpoints.cpp.pointops",
  "openpoints.cpp.pointops.functions",
  "openpoints.cpp.pointops.src",
  "openpoints.dataset",
  "openpoints.dataset.atom3d",
  "openpoints.dataset.graph_dataset",
  "openpoints.dataset.matterport3d",
  "openpoints.dataset.modelnet",
  "openpoints.dataset.molhiv",
  "openpoints.dataset.molpcba",
  "openpoints.dataset.parsers",
  "openpoints.dataset.pcqm4m",
  "openpoints.dataset.pcqm4mv2",
  "openpoints.dataset.s3dis",
  "openpoints.dataset.scannetv2",
  "openpoints.dataset.scanobjectnn",
  "openpoints.dataset.semantic_kitti",
  "openpoints.dataset.shapenet",
  "openpoints.dataset.shapenetpart",
  "openpoints.loss",
  "openpoints.models",
  "openpoints.models.backbone",
  "openpoints.models.classification",
  "openpoints.models.layers",
  "openpoints.models.reconstruction",
  "openpoints.models.segmentation",
  "openpoints.optim",
  "openpoints.scheduler",
  "openpoints.transforms",
  "openpoints.utils"
]
include-package-data = false
zip-safe = false

[tool.setuptools.package-data]
"openpoints.dataset.semantic_kitti" = [
  "label_mapping.yaml",
  "utils/semantic-kitti.yaml",
  "utils/meta/*.txt"
]
"openpoints.dataset.matterport3d" = ["category_mapping.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
